infra/k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-depl
spec:
  replicas: 1
  #Tell the DEPLOYMENT object How to FIND all pods is going to create
  selector: 
    matchLabels:
      app: expiration
  #Tell the DEPLOYMENT object how to CREATE all pods
  template:
    metadata:
      labels:
        app: expiration
    #How to behave
    spec:
      containers:
        #This name is only for logging purposes
        - name: expiration
          image: 10eggs/expiration
