infra/k8s/expiration-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-redis-depl
spec:
  replicas: 1
  #How to find pods which we'd like to create
  selector:
    matchLabels:
      app: expiration-redis
  template:
    metadata:
      #Label for POD
      labels:
        app: expiration-redis
    spec:
      containers:
        - name: expiration-redis
          image: redis
---
apiVersion: v1
kind: Service
metadata:
  name: expiration-redis-srv
spec:
  #Which pods this service will have access to
  selector:
    #Domain name we are going to attempt to connect to
    app: expiration-redis
  ports:
    - name: db
      protocol: TCP
      #Default port for Mongo
      port: 6379
      targetPort: 6379
