infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas: 1
  #Tell the DEPLOYMENT object How to FIND all pods is going to create
  selector: 
    matchLabels:
      app: orders
  #Tell the DEPLOYMENT object how to CREATE all pods
  template:
    metadata:
      labels:
        app: orders
    #How to behave
    spec:
      containers:
        #This name is only for logging purposes
        - name: orders
          image: 10eggs/orders
---
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
#Not specified = ClusterIP by default
spec:
  #This is going to tell this service how to find the set of pods that is supposed to govern to (template/metadata/labels/)
  selector:
    app: orders
  ports:
    - name: orders
      protocol: TCP
      port: 3000
      #As container(tickets) is listening on 3000
      targetPort: 3000
