infra/k8s/orders-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-mongo-depl
spec:
  replicas: 1
  #How to find pods which we'd like to create
  selector:
    matchLabels:
      app: orders-mongo
  template:
    metadata:
      #Label for POD
      labels:
        app: orders-mongo
    spec:
      containers:
        - name: orders-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: orders-mongo-srv
spec:
  #Which pods this service will have access to
  selector:
    #Domain name we are going to attempt to connect to
    app: orders-mongo
  ports:
    - name: db
      protocol: TCP
      #Default port for Mongo
      port: 27017
      targetPort: 27017
